Closed Bug 1878793 Opened 8 months ago Closed 8 months ago

MDN Drag and Drop example no longer works

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect)

defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox122 --- unaffected
firefox123 --- unaffected
firefox124 --- fixed

People

(Reporter: handyman, Assigned: m_kato)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

The drag-and-drop example is here. mozregression puts the cause at bug 1586471. NI to :m_kato since you are the author. It blamed Part 4 for this (Fix drag threshold for mochitests), which is obviously nonsense... but something happened.

Flags: needinfo?(m_kato)
Assignee: nobody → m_kato
Flags: needinfo?(m_kato)

It depends on xorigin iframe. I guess that Part 1 fix causes this regression.

Keywords: regression
Regressed by: 1586471

Set release status flags based on info from the regressing bug 1586471

See Also: → 1878819

(In reply to David Parks [:handyman] from comment #0)

It blamed Part 4 for this (Fix drag threshold for mochitests), which is obviously nonsense...

(That's just a bit of misleading output on mozregression's part. It always prints the last commit in the push, but the regression window applies to the push as a whole. We don't do CI builds for intermediate commits in a push that would allow mozregression to bisect commits within a push.)

This is a regression by bug 1586471.

We should use ReceiveInputEvent for all drag events on desktop.

Also, GV issue is bug 1878819 since we have to consider more when APZ
controller thread and main thread are different. But GV doesn't turn
on fission yet.

And, there is no way to add tests for native drag and drop operations.

S2 due to regressing something that's being taught on MDN. Please downgrade if S2 is too high.

Severity: -- → S2
Pushed by m_kato@ga2.so-net.ne.jp: https://hg.mozilla.org/integration/autoland/rev/bbcb9c75a491 Some drag events aren't fired on xorigin frame. r=botond
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: