Bug 1878793 - Some drag events aren't fired on xorigin frame. r=botond

This is a regression by bug 1586471.

We should use ReceiveInputEvent for all drag events on desktop.

Also, GV issue is bug 1878819 since we have to consider more when APZ
controller thread and main thread are different. But GV doesn't turn
on fission yet.

And, there is no way to add tests for native drag and drop operations.

Differential Revision: https://phabricator.services.mozilla.com/D200783